--- a/about_us.html
+++ b/about_us.html
@@ -18,19 +18,82 @@
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
             </ul>
-            <button class="mobile-menu-toggle">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
         </nav>
     </header>
     <section>
         <div class="hero">
-            <img src="images/game.gif" alt="Hero gif of game" class="hero-image">
+            <img src="images/about_us.gif" alt="about us" class="hero-image">
             <div class="hero-text">
-                <h1>Learn . Code . Play</h1>
-                <p>Discover the endless prossibility of game making with us.</p>
+                <h1>About Us</h1>
+                <p>Learn more about us.</p>
+            </div>
+        </div>
+    </section>
+    <br><br>
+    <h2>Clients</h2>
+    <section class="container">
+        <div class="flex-item">
+            <div class="flex-img">
+                <img src="https://picsum.photos/400/400">
+            </div>
+            <div class="flex-info">
+                <h4>Some info</h4>
+                <hr><br>
+                <p>Some meaningful info</p>
+            </div>
+        </div>
+        <div class="flex-item">
+            <div class="flex-img">
+                <img src="https://picsum.photos/400/400">
+            </div>
+            <div class="flex-info">
+                <h4>Some info</h4>
+                <hr><br>
+                <p>Some meaningful info</p>
+            </div>
+        </div>
+        <div class="flex-item">
+            <div class="flex-img">
+                <img src="https://picsum.photos/400/400">
+            </div>
+            <div class="flex-info">
+                <h4>Some info</h4>
+                <hr><br>
+                <p>Some meaningful info</p>
+            </div>
+        </div>
+    </section>
+    <br><br>
+    <h2>Clients</h2>
+    <section class="container">
+        <div class="flex-item">
+            <div class="flex-img">
+                <img src="https://picsum.photos/400/400">
+            </div>
+            <div class="flex-info">
+                <h4>Some info</h4>
+                <hr><br>
+                <p>Some meaningful info</p>
+            </div>
+        </div>
+        <div class="flex-item">
+            <div class="flex-img">
+                <img src="https://picsum.photos/400/400">
+            </div>
+            <div class="flex-info">
+                <h4>Some info</h4>
+                <hr><br>
+                <p>Some meaningful info</p>
+            </div>
+        </div>
+        <div class="flex-item">
+            <div class="flex-img">
+                <img src="https://picsum.photos/400/400">
+            </div>
+            <div class="flex-info">
+                <h4>Some info</h4>
+                <hr><br>
+                <p>Some meaningful info</p>
             </div>
         </div>
     </section>
