edited finished homepage

--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
             </div>
 
             <p>&copy; 2024 Ken gaming. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
-            </div>
+            <p>Privacy Policy | Terms of Service</p>
         </div>
     </footer>
 </body>
