--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="script.js">
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/script.js">
     </script>
 
 </head>
@@ -162,9 +162,9 @@
             <h3>Our Socials</h3>
 
             <div class="social-icons">
-                <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="images/youtube.png" alt="Youtube"></a>
-                <a href="#"><img src="images/tiktok.png" alt="Tiktok"></a>
+                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.youtube.com/@kencomputer-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
+                <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
 
             <p>&copy; 2024 Ken gaming. All rights reserved.</p>
