finished services page

--- a/services.html
+++ b/services.html
@@ -24,14 +24,69 @@
     </header>
     <section>
         <div class="hero">
-            <img src="images/game.gif" alt="Hero gif of game" class="hero-image">
+            <img src="https://media1.giphy.com/avatars/kendallaking/qYZoVGDtfIKh.GIF" alt="Hero gif of code now" class="hero-image">
             <div class="hero-text">
-                <h1>Learn . Code . Play</h1>
-                <p>Discover the endless prossibility of game making with us.</p>
+                <h1>Code Now!</h1>
+                <p>Unlock Your Game Development Potential!</p>
             </div>
         </div>
     </section>
     <br>
+
+    <section class="content-section" id="seemore">
+        <h2>Testimonials</h2>
+        <div class="container">
+            <div class="flex-item">
+                <div class="flex-info">
+                    <h1>Alex T., Indie Game Developer</h1>
+                    <hr><br>
+                    <p><i>"The Pro Plan helped me publish my first indie game!" </i></p><br>
+                    <p>5.0/5.0⭐</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <div class="flex-info">
+                    <h1>Jamie L. , Game Designer</h1>
+                    <hr><br>
+                    <p><i>"The courses & Elite Plan mentorship was a game-changer!"</i></p><br>
+                    <p>4.8/5.0⭐</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <div class="flex-info">
+                    <h1>Priya M., Student</h1>
+                    <hr><br>
+                    <p><i>"I learned more in two months here than in a year of self-study. The webinars are amazing!"</i></p><br>
+                    <p>5.0/5.0⭐</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <div class="flex-info">
+                    <h1>Ethan R., Freelance Game Artist</h1>
+                    <hr><br>
+                    <p><i>"Having access to professional game assets and design tips has been invaluable."</i></p><br>
+                    <p>4.6/5.0⭐</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <div class="flex-info">
+                    <h1>Sarah K., Game developer Hobbyist.</h1>
+                    <hr><br>
+                    <p><i>"The step-by-step guides were so easy to follow. I created a game with ease!"</i></p><br>
+                    <p>4.8/5.0⭐</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <div class="flex-info">
+                    <h1>Marco V., Game creator Developer</h1>
+                    <hr><br>
+                    <p><i>"I loved the Elite Plan's job board. I landed my first freelance gig in just two weeks!"</i></p><br>
+                    <p>4.9/5.0⭐</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="content-section">
         <h2>Membership</h2>
         <div class="split-container">
@@ -40,7 +95,7 @@
                     <img src="images/bronze.png" alt="bronze">
                 </div>
                 <div class="split">
-                    <h3>Basic Plan</h3>
+                    <h1>Basic Plan</h1>
                     <br><hr><br>
                     <p>✅ Access to beginner-level tutorials and game templates.</p><br>
                     <p>✅ Community forum participation for peer learning.</p><br>
@@ -53,7 +108,7 @@
                     <img src="images/silver.png" alt="silver">
                 </div>
                 <div class="split">
-                    <h3>Pro Plan</h3>
+                    <h1>Pro Plan</h1>
                     <br><hr><br>
                     <p>✅ Everything in the Basic Plan.</p><br>
                     <p>✅ Access to intermediate and advanced tutorials.</p><br>
@@ -67,7 +122,7 @@
                     <img src="images/gold.png" alt="gold">
                 </div>
                 <div class="split">
-                    <h3>Elite Plan</h3>
+                    <h1>Elite Plan</h1>
                     <br><hr><br>
                     <p>✅ Everything in the Pro Plan.</p><br>
                     <p>✅ One-on-one mentoring sessions.</p><br>
