--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/script.js">
+    <script src="js/script.js">
     </script>
 
 </head>
