before responsive navigation menu

--- a/about_us.html
+++ b/about_us.html
@@ -10,18 +10,16 @@
     </script>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <img src="images/logo.png" alt="Logo of gaming bear">
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="images/logo.png" alt="Logo of gaming bear">
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="services.html">Services</a></li>
+        </ul>
+    </nav>
     <section>
         <div class="hero">
             <img src="images/about_us.gif" alt="Hero gif of about us" class="hero-image">
@@ -31,7 +29,6 @@
             </div>
         </div>
     </section>
-    <br><br>
     <div class="container">
         <h2>About Us</h2>
     </div>
@@ -42,7 +39,6 @@
         <div class="split">
             <div>
                 <h1>Our Mission</h1>
-                <br>
                 <p>
                     Our mission is simple: to help you turn your game ideas into reality. 
                     We believe that anyone with a passion for gaming and storytelling can 
@@ -60,7 +56,6 @@
         <div class="split">
             <div>
                 <h1>Our Values</h1>
-                <br>
                 <p>
                     We encourage students to think outside the box and experiment with their ideas.
                     Game development is a team effort, and we value collaboration both in and out of the classroom.
@@ -78,7 +73,6 @@
         <div class="split">
             <div>
                 <h1>Our Goals</h1>
-                <br>
                 <p>Our primary goal is to build a community of creative individuals who thrive on innovation
                     and collaboration. We aim to nurture talent, foster creativity, and inspire a new generation
                     of game developers to push the boundaries of interactive storytelling and design.
@@ -95,12 +89,9 @@
             </div>
             <div class="flex-info">
                 <h4>Eleanor Hartwell</h4>
-                <hr><br>
-                <p>Eleanor has over 15 years of experience in the gaming industry, 
-                    having worked as a lead programmer for AAA titles like Galaxy 
-                    Tactician and Shadow Realms. She holds a Master's degree in Computer Science 
-                    with a specialization in Artificial Intelligence for games. Eleanor emphasizes 
-                    hands-on learning, encouraging students to build games.
+                <hr>
+                <p>Eleanor, a seasoned game programmer with 15+ years of experience and a 
+                    Master's in AI, inspires hands-on game creation.
                 </p>
             </div>
         </div>
@@ -110,12 +101,9 @@
             </div>
             <div class="flex-info">
                 <h4>Marcus Tanaka</h4>
-                <hr><br>
-                <p>Marcus has developed award-winning games like Dreamscapes and Puzzleverse. 
-                    He also served as a narrative consultant for prominent studios, blending 
-                    storytelling with gameplay mechanics seamlessly.Marcus uses workshops to 
-                    simulate real-world game design challenges, guiding students through rapid 
-                    prototyping and user feedback integration.
+                <hr>
+                <p>Marcus, an award-winning game developer and narrative consultant, 
+                    teaches game design through hands-on workshops on prototyping.
                 </p>
             </div>
         </div>
@@ -125,17 +113,13 @@
             </div>
             <div class="flex-info">
                 <h4>Sophia Mendez</h4>
-                <hr><br>
-                <p>Sophia is a pioneer in VR game design, having developed immersive experiences 
-                    like Virtual Odyssey and Reality Shifters. She holds a Ph.D. in Human-Computer 
-                    Interaction and has collaborated with VR companies. Sophia teaches students to 
-                    develop VR experiences using while focusing on storytelling and interactivity 
-                    in 3D spaces.
+                <hr>
+                <p>Sophia, a VR game design pioneer with a Ph.D. in HCI, 
+                    teaches immersive storytelling and interactivity in 3D spaces.
                 </p>
             </div>
         </div>
     </section>
-    <br><br><br>
     <section class="content-section">
         <h2>Coding languages</h2>
         <div class="split-container">
@@ -181,7 +165,6 @@
             </div>
         </div>
     </section>
-    <br><br><br>
     <section class="content-section">
         <h2>Contact Us</h2>
         <div class="split-container">
@@ -191,7 +174,7 @@
                 </div>
                 <div class="split">
                     <h4>Phone number:</h4>
-                    <p>+65 93820569</p>
+                    <h4>+65 93820569</h4>
                 </div>
             </div>
             <div class="flex-item">
@@ -200,7 +183,7 @@
                 </div>
                 <div class="split">
                     <h4>Email:</h4>
-                    <p>S10270417@connect.np.edu.sg</p>
+                    <h4>S10270417@connect.np.edu.sg</h4>
                 </div>
             </div>
             <div class="flex-item">
@@ -209,20 +192,10 @@
                 </div>
                 <div class="split">
                     <h4>Location:</h4>
-                    <p>535 Clementi Road, Singapore 599489</p>
+                    <h4>535 Clementi Road, Singapore 599489</h4>
                 </div>
             </div>
         </div>
-    </section>
-    <br><br>
-    <section class="content-section">
-        <h2>Send Email</h2>
-        <form id="emailForm" onsubmit="return validateEmail();">
-            <div class="form-container">
-                <input id="emailInput" type="email" placeholder="example@gmail.com" required>
-                <button type="submit">Submit</button>
-            </div>
-        </form>
     </section>
 
     <footer>
