--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <img src="images/logo.png" alt="Logo of gaming bear">
-            </div>
-            <ul class="nav-links">
+    <nav class="navbar">
+        <div class="logo">
+            <img src="images/logo.png" alt="Logo of gaming bear">
+        </div>
+        <div class="nav-links">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </nav>
     <section>
         <div class="hero">
             <img src="images/game.gif" alt="Hero gif of game" class="hero-image">
             <div class="hero-text">
                 <h1>Learn . Code . Play</h1>
                 <p>Discover the endless prossibility of game making with us.</p>
-                <br>
                 <a href="#seemore" class="button">See more</a>
             </div>
         </div>
@@ -45,7 +44,7 @@
                 </div>
                 <div class="flex-info">
                     <h1>Career</h1>
-                    <hr><br>
+                    <hr>
                     <p>Learning programming opens doors to a wide range of careers, from game development & software
                         engineering and many more.</p>
                 </div>
@@ -56,7 +55,7 @@
                 </div>
                 <div class="flex-info">
                     <h1>Problem-solving</h1>
-                    <hr><br>
+                    <hr>
                     <p>Programming enhances your problem-solving abilities by teaching you how to break down complex
                         problems into manageable parts.</p>
                 </div>
@@ -67,7 +66,7 @@
                 </div>
                 <div class="flex-info">
                     <h1>Creativity</h1>
-                    <hr><br>
+                    <hr>
                     <p>As a programmer, you can contribute to technological innovations like developing groundbreaking
                         video games.</p>
                 </div>
@@ -82,14 +81,11 @@
         <div class="split">
             <div>
                 <h1>1. Learn More about our company</h1>
-                <br>
                 <p>
                     Discover who we are, our mission, and how we're shaping the future
                     of gaming. Learn about our journey, values, and the team behind our
                     innovative products and services.
                 </p>
-                <br>
-
                 <a href="about_us.html" class="button">About Us</a>
             </div>
         </div>
@@ -102,13 +98,11 @@
         <div class="split">
             <div>
                 <h1>2. See what we have to offer</h1>
-                <br>
                 <p>
                     Explore our range of services designed to help you create,
                     develop, and enjoy exciting gaming experiences. From game development
                     to expert support, we've got you covered!
                 </p>
-                <br>
                 <a href="services.html" class="button">Services</a>
             </div>
         </div>
@@ -123,7 +117,7 @@
                 </div>
                 <div class="split">
                     <h4>Phone number:</h4>
-                    <p>+65 93820569</p>
+                    <h4>+65 93820569</h4>
                 </div>
             </div>
             <div class="flex-item">
@@ -132,7 +126,7 @@
                 </div>
                 <div class="split">
                     <h4>Email:</h4>
-                    <p>S10270417@connect.np.edu.sg</p>
+                    <h4>S10270417@connect.np.edu.sg</h4>
                 </div>
             </div>
             <div class="flex-item">
@@ -141,7 +135,7 @@
                 </div>
                 <div class="split">
                     <h4>Location:</h4>
-                    <p>535 Clementi Road, Singapore 599489</p>
+                    <h4>535 Clementi Road, Singapore 599489</h4>
                 </div>
             </div>
         </div>
@@ -162,7 +156,8 @@
             <h3>Our Socials</h3>
 
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png"
+                        alt="Facebook"></a>
                 <a href="https://www.youtube.com/@kencomputer-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
                 <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
