--- a/services.html
+++ b/services.html
@@ -10,18 +10,16 @@
     </script>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <img src="images/logo.png" alt="Logo of gaming bear">
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="images/logo.png" alt="Logo of gaming bear">
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="services.html">Services</a></li>
+        </ul>
+    </nav>
     <section>
         <div class="hero">
             <img src="https://media1.giphy.com/avatars/kendallaking/qYZoVGDtfIKh.GIF" alt="Hero gif of code now" class="hero-image">
@@ -31,56 +29,54 @@
             </div>
         </div>
     </section>
-    <br>
-
     <section class="content-section" id="seemore">
         <h2>Testimonials</h2>
         <div class="container">
             <div class="flex-item">
                 <div class="flex-info">
                     <h1>Alex T., Indie Game Developer</h1>
-                    <hr><br>
-                    <p><i>"The Pro Plan helped me publish my first indie game!" </i></p><br>
+                    <hr>
+                    <p><i>"The Pro Plan helped me publish my first indie game!" </i></p>
                     <p>5.0/5.0⭐</p>
                 </div>
             </div>
             <div class="flex-item">
                 <div class="flex-info">
                     <h1>Jamie L. , Game Designer</h1>
-                    <hr><br>
-                    <p><i>"The courses & Elite Plan mentorship was a game-changer!"</i></p><br>
+                    <hr>
+                    <p><i>"The courses & Elite Plan mentorship was a game-changer!"</i></p>
                     <p>4.8/5.0⭐</p>
                 </div>
             </div>
             <div class="flex-item">
                 <div class="flex-info">
                     <h1>Priya M., Student</h1>
-                    <hr><br>
-                    <p><i>"I learned more in two months here than in a year of self-study. The webinars are amazing!"</i></p><br>
+                    <hr>
+                    <p><i>"I learned more in two months here than in a year of self-study. The webinars are amazing!"</i></p>
                     <p>5.0/5.0⭐</p>
                 </div>
             </div>
             <div class="flex-item">
                 <div class="flex-info">
                     <h1>Ethan R., Freelance Game Artist</h1>
-                    <hr><br>
-                    <p><i>"Having access to professional game assets and design tips has been invaluable."</i></p><br>
+                    <hr>
+                    <p><i>"Having access to professional game assets and design tips has been invaluable."</i></p>
                     <p>4.6/5.0⭐</p>
                 </div>
             </div>
             <div class="flex-item">
                 <div class="flex-info">
                     <h1>Sarah K., Game developer Hobbyist.</h1>
-                    <hr><br>
-                    <p><i>"The step-by-step guides were so easy to follow. I created a game with ease!"</i></p><br>
+                    <hr>
+                    <p><i>"The step-by-step guides were so easy to follow. I created a game with ease!"</i></p>
                     <p>4.8/5.0⭐</p>
                 </div>
             </div>
             <div class="flex-item">
                 <div class="flex-info">
                     <h1>Marco V., Game creator Developer</h1>
-                    <hr><br>
-                    <p><i>"I loved the Elite Plan's job board. I landed my first freelance gig in just two weeks!"</i></p><br>
+                    <hr>
+                    <p><i>"I loved the Elite Plan's job board. I landed my first freelance gig in just two weeks!"</i></p>
                     <p>4.9/5.0⭐</p>
                 </div>
             </div>
@@ -96,10 +92,11 @@
                 </div>
                 <div class="split">
                     <h1>Basic Plan</h1>
-                    <br><hr><br>
-                    <p>✅ Access to beginner-level tutorials and game templates.</p><br>
-                    <p>✅ Community forum participation for peer learning.</p><br>
-                    <p>✅ Monthly Q&A with instructors.</p><br><br><br><br><br>
+                    <hr>
+                    <h5>✅ Access to beginner-level tutorials and game templates.</h5>
+                    <h5>✅ Community forum participation for peer learning.</h5>
+                    <h5>✅ Monthly Q&A with instructors.</h5>
+                    <h5>✅ Step by step tutorials on how to code games</h5>
                 </div>
                 <a href="#" class="button">$24.99 per month</a>
             </div>
@@ -109,11 +106,11 @@
                 </div>
                 <div class="split">
                     <h1>Pro Plan</h1>
-                    <br><hr><br>
-                    <p>✅ Everything in the Basic Plan.</p><br>
-                    <p>✅ Access to intermediate and advanced tutorials.</p><br>
-                    <p>✅ Weekly live workshops and webinars with professionals.</p><br>
-                    <p>✅ Downloadable assets like textures, sprites, and 3D models.</p><br><br>
+                    <hr>
+                    <h5>✅ Everything in the Basic Plan.</h5>
+                    <h5>✅ Access to intermediate and advanced tutorials.</h5>
+                    <h5>✅ Weekly live workshops and webinars with professionals.</h5>
+                    <h5>✅ Downloadable assets like textures, sprites, and 3D models.</h5>
                 </div>
                 <a href="#" class="button">$44.99 per month</a>
             </div>
@@ -123,13 +120,13 @@
                 </div>
                 <div class="split">
                     <h1>Elite Plan</h1>
-                    <br><hr><br>
-                    <p>✅ Everything in the Pro Plan.</p><br>
-                    <p>✅ One-on-one mentoring sessions.</p><br>
-                    <p>✅ Portfolio review and guidance for job readiness.</p><br>
-                    <p>✅ Early access to new courses and exclusive content.</p><br><br><br>
+                    <hr>
+                    <h5>✅ Everything in the Pro Plan with more benefits.</h5>
+                    <h5>✅ One-on-one mentoring sessions.</h5>
+                    <h5>✅ Portfolio review and guidance for job readiness.</h5>
+                    <h5>✅ Early access to new courses and exclusive content.</h5>
                 </div>
-                <a href="#seemore" class="button">$79.99 per month</a>
+                <a href="#" class="button">$79.99 per month</a>
             </div>
         </div>
     </section>
@@ -143,7 +140,7 @@
                 </div>
                 <div class="split">
                     <h4>Phone number:</h4>
-                    <p>+65 93820569</p>
+                    <h4>+65 93820569</h4>
                 </div>
             </div>
             <div class="flex-item">
@@ -152,7 +149,7 @@
                 </div>
                 <div class="split">
                     <h4>Email:</h4>
-                    <p>S10270417@connect.np.edu.sg</p>
+                    <h4>S10270417@connect.np.edu.sg</h4>
                 </div>
             </div>
             <div class="flex-item">
@@ -161,7 +158,7 @@
                 </div>
                 <div class="split">
                     <h4>Location:</h4>
-                    <p>535 Clementi Road, Singapore 599489</p>
+                    <h4>535 Clementi Road, Singapore 599489</h4>
                 </div>
             </div>
         </div>
