After responsive navigation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <div class="logo">
             <img src="images/logo.png" alt="Logo of gaming bear">
         </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="nav-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
