--- a/services.html
+++ b/services.html
@@ -14,11 +14,18 @@
         <div class="logo">
             <img src="images/logo.png" alt="Logo of gaming bear">
         </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about_us.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-        </ul>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="nav-links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_us.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+            </ul>
+        </div>
     </nav>
     <section>
         <div class="hero">
